http-server: use vertical layout

--- a/web/index.html
+++ b/web/index.html
@@ -45,7 +45,7 @@
                 </div>
             </div>
         </div>
-        <div class="tile is-ancestor">
+        <div class="tile is-ancestor is-vertical">
             <div class="tile is-parent" v-for="soundboard in soundboards" :key="soundboard.name">
                 <div class="tile is-child box">
                     <p class="title">{{ soundboard.name }}</p>
