--- a/web/index.html
+++ b/web/index.html
@@ -6,11 +6,26 @@
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-slider@2/dist/css/bulma-slider.min.css">
     <style>
         .button {
             border-radius: 0px;
+        }
+
+        .buttons.has-addons .button:last-child {
+            margin-right: .5rem;
+        }
+
+        .buttons:last-child {
+            margin-bottom: 0rem;
+        }
+
+        .buttons:not(:last-child) {
+            margin-bottom: 0rem;
         }
 
         .fill-size {
@@ -18,6 +33,7 @@
             height: 90%;
             margin-left: auto;
             margin-right: auto;
+            margin-top: 0.2rem;
             display: block;
         }
 
@@ -27,11 +43,16 @@
         }
 
         .filter {
-            padding: 1.25rem;
+            padding: 1rem;
         }
 
         .filter input {
             width: 100%;
+        }
+
+        input[type="range"].slider {
+            padding-right: 0.2rem;
+            margin: 0.5rem 0;
         }
 
         .navbar {
@@ -50,6 +71,30 @@
         html {
             background-color: #363636;
         }
+
+        @media screen and (max-width:768px) {
+            #bottom_menu {
+                padding: 0.5rem;
+            }
+
+            .title.is-5 {
+                font-size: 1rem;
+            }
+        }
+
+        @media screen and (min-width:768px) {
+            .song_progress .columns {
+                display: block;
+            }
+
+            #inputs .columns {
+                display: block;
+            }
+
+            #inputs {
+                margin-right: 0.5rem;
+            }
+        }
     </style>
 </head>
 
@@ -57,20 +102,35 @@
     <div id="app">
         <nav class="navbar is-fixed-bottom is-white padding-1">
             <div class="columns">
-                <div class="colum">
-                    <div class="filter"><input type="text" placeholder="filter" :value='filter'
-                            @input='evt=>filter=evt.target.value'></div>
+                <div class="column is-hidden-tablet" id="bottom_menu">
+                    <button v-if="show_bottom_menu" class="button fill-size"
+                        @click="show_bottom_menu=false">Collapse</button>
+                    <button v-if="!show_bottom_menu" class="button fill-size"
+                        @click="show_bottom_menu=true">Show</button>
                 </div>
-                <template v-if="activeSounds.length > 0">
+                <div class="colum" id="inputs" v-if="show_bottom_menu">
+                    <div class="columns is-mobile">
+                        <div class="column filter"><input class="filter_input" type="text" placeholder="filter"
+                                :value='filter' @input='evt=>filter=evt.target.value' v-on:keyup.enter="hideKeyboard">
+                        </div>
+                        <div class="column"> <input class="slider_input slider is-fullwidth" step="0.1" min="0" max="1"
+                                v-model="volume" type="range"></div>
+                    </div>
+                </div>
+                <template v-if="show_bottom_menu && activeSounds.length > 0">
                     <div class="colum"><button class="button is-danger fill-size" @click="stopAllSound">Stop
                             All</button></div>
-                    <div class="column" v-for="sound in activeSounds" :key="sound.name">
-                        <div class="title is-5 center">{{ sound.name }}</div>
-                        <progress class="progress" :value="sound.play_duration"
-                            :max="sound.total_duration">{{ sound.play_duration  }}</progress>
+                    <div class="column song_progress" v-for="sound in activeSounds" :key="sound.name">
+                        <div class="columns is-mobile">
+                            <div class="column">
+                                <div class="title is-5 center">{{ sound.name }}</div>
+                            </div>
+                            <div class="column"> <progress class="progress" :value="sound.play_duration"
+                                    :max="sound.total_duration">{{ sound.play_duration  }}</progress></div>
+                        </div>
                     </div>
                 </template>
-                <div class="column" v-else>
+                <div class="column is-hidden-mobile" v-else>
                     <p class="title is-3 center">No active sounds</p>
                 </div>
 
@@ -78,11 +138,9 @@
         </nav>
         <section class="hero is-dark is-bold">
             <div class="hero-body">
-                <div class="container">
-                    <h1 class="title">
-                        soundboard
-                    </h1>
-                </div>
+                <h1 class="title">
+                    soundboard
+                </h1>
             </div>
         </section>
         <div class="tile is-ancestor is-vertical">
@@ -95,8 +153,17 @@
                                 <button v-if="!activeSounds.some(item => sound.name == item.name)"
                                     class="button is-success" @click="playSound(soundboard.id, sound.id)"
                                     :key="sound.name">{{ sound.name }}</button>
-                                <button v-else class="button is-danger" @click="stopSound(soundboard.id, sound.id)"
-                                    :key="sound.name">{{ sound.name }}</button>
+                                <template v-else>
+                                    <div class="buttons has-addons">
+                                        <button class="button is-success" @click="playSound(soundboard.id, sound.id)"
+                                            :key="sound.name">{{ sound.name }}</button>
+                                        <button class="button is-danger" @click="stopSound(soundboard.id, sound.id)">
+                                            <span class="icon is-small">
+                                                <i class="fas fa-stop"></i>
+                                            </span>
+                                        </button>
+                                    </div>
+                                </template>
                             </template>
                         </template>
                     </div>
@@ -113,14 +180,19 @@
                 soundboards: [],
                 lastRequestAnswer: "",
                 filter: "",
-                filterRegex: new RegExp("", "i")
+                volume: 1.0,
+                filterRegex: new RegExp("", "i"),
+                show_bottom_menu: true
             },
             created: function () {
                 const self = this;
                 setInterval(function () {
+                    if (getComputedStyle(document.querySelector("#bottom_menu"), null).display === "none") {
+                        self.show_bottom_menu = true;
+                    }
                     axios
                         .get('/api/sounds/active')
-                        .then(response => (self.activeSounds = response.data.data))
+                        .then(response => (self.activeSounds = response.data.data));
                 }, 500);
                 axios
                     .get('/api/soundboards')
@@ -138,9 +210,17 @@
             watch: {
                 filter: function (val, oldVal) {
                     this.filterRegex = new RegExp(val, "i");
+                },
+                volume: function (val, oldVal) {
+                    axios
+                        .post('/api/sounds/volume', { volume: parseFloat(val) })
+                        .then(response => (this.lastRequestAnswer = response.data.data))
                 }
             },
             methods: {
+                hideKeyboard() {
+                    document.activeElement.blur();
+                },
                 playSound: function (soundboard_id, sound_id) {
                     axios
                         .post('/api/soundboards/' + soundboard_id + '/sounds/' + sound_id + '/play')
