--- a/web/index.html
+++ b/web/index.html
@@ -3,99 +3,16 @@
 
 <head>
     <title>soundboard</title>
-    <script src="https://unpkg.com/vue"></script>
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="ext/vue_2_6_11.min.js" defer></script>
+    <script src="ext/axios_0_19_2.min.js" defer></script>
+    <script src="js/index.js" defer></script>
+    <link rel="stylesheet" href="ext/bulma_0_9_0.min.css">
+    <link rel="stylesheet" href="ext/font-awesome_4_7_0.min.css">
+    <link rel="stylesheet" href="ext//bulma-slider_2_0_0.min.css">
+    <link rel="stylesheet" href="css/index.css">
     <meta charset="utf-8">
     <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.0/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-slider@2/dist/css/bulma-slider.min.css">
-    <style>
-        .button {
-            border-radius: 0px;
-        }
-
-        .buttons.has-addons .button:last-child {
-            margin-right: .5rem;
-        }
-
-        .buttons:last-child {
-            margin-bottom: 0rem;
-        }
-
-        .buttons:not(:last-child) {
-            margin-bottom: 0rem;
-        }
-
-        .fill-size {
-            width: 100%;
-            height: 90%;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 0.2rem;
-            display: block;
-        }
-
-        body.has-navbar-fixed-bottom,
-        html.has-navbar-fixed-bottom {
-            padding-bottom: 10rem;
-        }
-
-        .filter {
-            padding: 1rem;
-        }
-
-        .filter input {
-            width: 100%;
-        }
-
-        input[type="range"].slider {
-            padding-right: 0.2rem;
-            margin: 0.5rem 0;
-        }
-
-        .navbar {
-            padding: 1rem;
-            border-top: 1px solid #363636;
-        }
-
-        .box {
-            border-radius: 0px;
-        }
-
-        .center {
-            text-align: center;
-        }
-
-        html {
-            background-color: #363636;
-        }
-
-        @media screen and (max-width:768px) {
-            #bottom_menu {
-                padding: 0.5rem;
-            }
-
-            .title.is-5 {
-                font-size: 1rem;
-            }
-        }
-
-        @media screen and (min-width:768px) {
-            .song_progress .columns {
-                display: block;
-            }
-
-            #inputs .columns {
-                display: block;
-            }
-
-            #inputs {
-                margin-right: 0.5rem;
-            }
-        }
-    </style>
 </head>
 
 <body class="has-navbar-fixed-bottom">
@@ -103,13 +20,13 @@
         <nav class="navbar is-fixed-bottom is-white padding-1">
             <div class="columns">
                 <div class="column is-hidden-tablet" id="bottom_menu">
-                    <button v-if="show_bottom_menu" class="button fill-size"
-                        @click="show_bottom_menu=false">Collapse</button>
                     <button v-if="!show_bottom_menu" class="button fill-size"
                         @click="show_bottom_menu=true">Show</button>
                 </div>
                 <div class="colum" id="inputs" v-if="show_bottom_menu">
                     <div class="columns is-mobile">
+                        <button v-if="show_bottom_menu" class="button is-hidden-tablet"
+                            @click="show_bottom_menu=false">Hide</button>
                         <div class="column filter"><input class="filter_input" type="text" placeholder="filter"
                                 :value='filter' @input='evt=>filter=evt.target.value' v-on:keyup.enter="hideKeyboard">
                         </div>
@@ -171,74 +88,6 @@
             </div>
         </div>
     </div>
-
-    <script>
-        var app = new Vue({
-            el: '#app',
-            data: {
-                activeSounds: [],
-                soundboards: [],
-                lastRequestAnswer: "",
-                filter: "",
-                volume: 1.0,
-                filterRegex: new RegExp("", "i"),
-                show_bottom_menu: true
-            },
-            created: function () {
-                const self = this;
-                setInterval(function () {
-                    if (getComputedStyle(document.querySelector("#bottom_menu"), null).display === "none") {
-                        self.show_bottom_menu = true;
-                    }
-                    axios
-                        .get('/api/sounds/active')
-                        .then(response => (self.activeSounds = response.data.data));
-                }, 500);
-                axios
-                    .get('/api/soundboards')
-                    .then(response => {
-                        self.soundboards = response.data.data;
-                        for (let i = 0; i < self.soundboards.length; i++) {
-                            axios
-                                .get('/api/soundboards/' + i + '/sounds')
-                                .then(response => {
-                                    self.soundboards[i].sounds = response.data.data;
-                                });
-                        }
-                    });
-            },
-            watch: {
-                filter: function (val, oldVal) {
-                    this.filterRegex = new RegExp(val, "i");
-                },
-                volume: function (val, oldVal) {
-                    axios
-                        .post('/api/sounds/volume', { volume: parseFloat(val) })
-                        .then(response => (this.lastRequestAnswer = response.data.data))
-                }
-            },
-            methods: {
-                hideKeyboard() {
-                    document.activeElement.blur();
-                },
-                playSound: function (soundboard_id, sound_id) {
-                    axios
-                        .post('/api/soundboards/' + soundboard_id + '/sounds/' + sound_id + '/play')
-                        .then(response => (this.lastRequestAnswer = response.data.data))
-                },
-                stopSound: function (soundboard_id, sound_id) {
-                    axios
-                        .post('/api/soundboards/' + soundboard_id + '/sounds/' + sound_id + '/stop')
-                        .then(response => (this.lastRequestAnswer = response.data.data))
-                },
-                stopAllSound: function () {
-                    axios
-                        .post('/api/sounds/stopall')
-                        .then(response => (this.lastRequestAnswer = response.data.data))
-                }
-            }
-        })
-    </script>
 </body>
 
 </html>
