--- a/web/index.html
+++ b/web/index.html
@@ -16,7 +16,7 @@
 
 <body class="has-navbar-fixed-bottom">
     <div id="app">
-        <div class="modal is-active" v-if="show_status_modal" id="status_modal">
+        <div class="modal is-active" v-if="showStatusModal" id="status_modal">
             <div class="modal-background"></div>
             <div class="notification is-danger">
                 <p class="title is-5 center">Lost connection to soundboard server</p>
@@ -25,19 +25,18 @@
         <nav class="navbar is-fixed-bottom is-white padding-1">
             <div class="columns">
                 <div class="column is-hidden-tablet" id="bottom_menu">
-                    <button v-if="!show_bottom_menu" class="button fill-size"
-                        @click="show_bottom_menu=true">Show</button>
+                    <button v-if="!showBottomMenu" class="button fill-size" @click="showBottomMenu=true">Show</button>
                 </div>
-                <div class="colum" id="inputs" v-if="show_bottom_menu">
+                <div class="colum" id="inputs" v-if="showBottomMenu">
                     <div class="columns is-mobile">
-                        <button v-if="show_bottom_menu" class="button is-hidden-tablet"
-                            @click="show_bottom_menu=false">Hide</button>
-                        <div class="column filter"><input class="filter_input" type="text" placeholder="filter"
-                                :value='filter' @input='evt=>filter=evt.target.value' v-on:keyup.enter="hideKeyboard">
+                        <div class="column is-hidden-tablet is-narrow" v-if="showBottomMenu"> <button class="button"
+                                @click="showBottomMenu=false">Hide</button></div>
+                        <div class="column filter"><input class="input" type="text" placeholder="filter" :value='filter'
+                                @input='evt=>filter=evt.target.value' v-on:keyup.enter="hideKeyboard">
                         </div>
-                        <div class="column" id="device_chooser">
+                        <div class="column is-narrow" id="device_chooser">
                             <div class="select is-up">
-                                <select v-model="selected_device">
+                                <select v-model="selectedDevice">
                                     <option value="Both" selected="selected">Both</option>
                                     <option value="Output">Output</option>
                                     <option value="Loop">Loop</option>
@@ -48,13 +47,13 @@
                                 v-model="volume" type="range"></div>
                     </div>
                 </div>
-                <template v-if="show_bottom_menu && activeSounds.length > 0">
+                <template v-if="showBottomMenu && activeSounds.length > 0">
                     <div class="colum"><button class="button is-danger fill-size" @click="stopAllSound">Stop
                             All</button></div>
-                    <div class="column song_progress" v-for="sound in activeSounds" :key="sound.name">
+                    <div class="column song_progress is-narrow" v-for="sound in activeSounds" :key="sound.name">
                         <div class="columns is-mobile">
                             <div class="column">
-                                <div class="title is-5 center">{{ sound.name }}</div>
+                                <div class="title is-5">{{ sound.name }}</div>
                             </div>
                             <div class="column"> <progress v-if="sound.total_duration != 0" class="progress"
                                     :value="sound.play_duration"
@@ -92,7 +91,7 @@
                                             :key="sound.name">{{ sound.name }}</button>
                                         <button class="button is-danger" @click="stopSound(soundboard.id, sound.id)">
                                             <span class="icon is-small">
-                                                ⏹
+                                                ■
                                             </span>
                                         </button>
                                     </div>
