webui: require buefy as local resource

--- a/web/index.html
+++ b/web/index.html
@@ -5,10 +5,10 @@
     <title>soundboard</title>
     <script src="ext/vue_2_6_11.min.js" defer></script>
     <script src="ext/axios_0_19_2.min.js" defer></script>
-    <script src="https://unpkg.com/buefy/dist/buefy.min.js" defer></script>
+    <script src="ext/buefy_0_8_20.min.js" defer></script>
     <script src="js/index.js" defer></script>
     <link rel="stylesheet" href="ext/bulma_0_9_0.min.css">
-    <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
+    <link rel="stylesheet" href="ext/buefy_0_8_20.min.css">
     <link rel="stylesheet" href="css/index.css">
     <meta charset="utf-8">
     <meta name="viewport"
