--- a/web/index.html
+++ b/web/index.html
@@ -104,11 +104,13 @@
                             <template v-if="filterRegex.test(sound.name)">
                                 <button v-if="!activeSounds.some(item => sound.name == item.name)"
                                     class="button is-success" @click="playSound(soundboard.id, sound.id)"
-                                    :key="sound.id">{{ sound.name }}</button>
+                                    :key="sound.id"
+                                    @contextmenu.prevent="deleteSound(soundboard.id, sound.id)">{{ sound.name }}</button>
                                 <template v-else>
                                     <div class="buttons has-addons">
                                         <button class="button is-success" @click="playSound(soundboard.id, sound.id)"
-                                            :key="sound.id">{{ sound.name }}</button>
+                                            :key="sound.id"
+                                            @contextmenu.prevent="deleteSound(soundboard.id, sound.id)">{{ sound.name }}</button>
                                         <button class="button is-danger" @click="stopSound(soundboard.id, sound.id)">
                                             <span class="icon is-small">
                                                 ■
