http: reload from disk on query parameter

--- a/web/index.html
+++ b/web/index.html
@@ -28,6 +28,12 @@
                 <p class="title is-5 center">Lost connection to soundboard server</p>
             </div>
         </div>
+        <div class="modal is-active" v-show="showLoadingModal" style="display:none;" id="loading_modal">
+            <div class="modal-background"></div>
+            <div class="notification">
+                <p class="title is-5 center">Loading data...</p>
+            </div>
+        </div>
         <nav class="navbar is-fixed-bottom is-white padding-1">
             <div class="columns">
                 <div class="column is-hidden-tablet" id="bottom_menu">
